welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:6: error: not found: value estPositionFinale
}while(!estPositionFinale)
        ^